--- a/client/src/CSS/Itinerary.css
+++ b/client/src/CSS/Itinerary.css
@@ -8,13 +8,13 @@
 
 .itinerary-cards-gridmaker {
   display: grid;
-  width: 100;
+  width: 100%;
   height: 100%;
   grid-template-columns: 19% 27% 27% 27%;
 
   grid-template-rows: 5fr, 5fr, 5fr, 37fr, 5fr, 7fr;
 
-  height: 100;
+  height: 100%;
   width: 98%;
   border-style: solid;
   border-color: firebrick;
@@ -33,13 +33,13 @@
 
 .itinerary-cards {
   display: grid;
-  height: 100;
+  height: 100%;
   width: 100%;
   grid-template-rows: 85% 15%;
 }
 
 .itinerary-cards-container {
-  height: 100;
+  height: 100%;
   width: 100%;
   grid-row-start: 1;
   grid-row-end: 2;
@@ -123,11 +123,23 @@
 
 .itinerary-image {
   text-align: center;
-
+  height: 100%;
+  width: 100%;
   grid-row-start: 4;
   grid-row-end: 5;
   grid-column-start: 1;
   grid-column-end: 5;
+  display: grid;
+
+  grid-template-columns: 10fr 10fr 10fr 10fr 10fr;
+  grid-template-rows: 10fr 10fr 10fr 10fr 10fr;
+}
+
+a {
+  grid-row-start: 1;
+  grid-row-end: 6;
+  grid-column-start: 1;
+  grid-column-end: 7;
 }
 
 .itinerary-image-height {
@@ -137,10 +149,12 @@
 }
 
 .itinerary-favourite {
-  grid-row-start: 4;
-  grid-row-end: 5;
-  grid-column-start: 4;
-  grid-column-end: 5;
+  margin-top: 5%;
+  margin-right: 80%;
+  grid-row-start: 1;
+  grid-row-end: 2;
+  grid-column-start: 5;
+  grid-column-end: 6;
   display: flex;
 }
 
