--- a/client/src/CSS/HamburgerMenuList.css
+++ b/client/src/CSS/HamburgerMenuList.css
@@ -1,6 +1,6 @@
 .hamburger-menu-list-open {
     height: 92%;
-    background: red;
+    background: blue;
     box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
     padding-top: 10%;
     /* width: 100%; */
