--- a/client/src/CSS/Login.css
+++ b/client/src/CSS/Login.css
@@ -10,6 +10,7 @@
 
 }
 
+
 .user-loginform label {
     display: inline-block;
     width: 100%;
@@ -30,6 +31,7 @@
     font-size: 150%;
     color: red;
     padding: 5%;
+    text-align: center;
 }
 
 .login-alert {
@@ -39,4 +41,11 @@
     font-size: 170%;
     padding-bottom: 7%;
     padding-top: 5%;
+}
+
+.form-flexer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    margin-right: 19%;
 }
