--- a/client/src/CSS/Comments.css
+++ b/client/src/CSS/Comments.css
@@ -19,8 +19,8 @@
 
 .commentbox {
     display: grid;
-    grid-template-columns: 10% 85% 5%;
-    grid-template-rows: 65% 35%;
+    grid-template-columns: 10% 75% 15%;
+    grid-template-rows: 27% 45% 28%;
     color: blue;
 
 
@@ -36,7 +36,8 @@ form {
     color: blue;
     font-weight: bold;
     grid-column-start: 1;
-    grid-column-end: 2;
+    grid-column-end: 4;
+    text-align: center;
     grid-row-start: 1;
     grid-row-end: 2;
 
@@ -50,10 +51,10 @@ form {
 
 
 .comment-content {
-    grid-column-start: 2;
+    grid-column-start: 1;
     grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
 
 
 }
@@ -62,16 +63,16 @@ form {
 .comment-delete {
     grid-column-start: 3;
     grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
 
 }
 
 .comment-horizontal-line {
     grid-column-start: 1;
     grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
 }
 
 
