--- a/client/src/CSS/CityCard.css
+++ b/client/src/CSS/CityCard.css
@@ -1,14 +1,48 @@
-.card-image img {
-    border-radius:10% !important;
-    width:10%;
-    background-color: aqua;
+@media only screen and (min-width: 768px) {
+
+    .card-image {
+        margin-top: 2%;
+    }
+
+    .card-image img {
+        border-radius: 10% !important;
+        width: 100%;
+        max-width: 496px;
+        max-height: 340px;
+
+        padding: 5%;
+    }
+
+    .material-icons {
+        width: 20%;
+        color: yellow !important;
+    }
+
+    .card-title {
+        font-size: 180% !important;
+    }
+
+    .card a {
+        color: orangered !important;
+        font-size: 110%;
+    }
+
+
+
+
 }
 
+@media only screen and (max-width: 767px) {
+    .material-icons {
+        width: 20%;
+        color: yellow !important;
+    }
 
 
-.material-icons {
-    width:20%;
-    color:yellow !important;
-  }
+    .card-image img {
+        border-radius: 10% !important;
+        width: 10%;
+        background-color: aqua;
+    }
 
-  
+}
