--- a/client/src/CSS/HamburgerMenuList.css
+++ b/client/src/CSS/HamburgerMenuList.css
@@ -3,12 +3,12 @@
     background: blue;
     box-shadow: 2px 0px 5px rgba(0, 0, 0, 0.5);
     padding-top: 10%;
-    /* width: 100%; */
+
     top: 0;
     left: 0;
     display: flex;
     justify-content: center;
-    /* align-items: center; */
+
 
 
     z-index: 200;
@@ -18,33 +18,18 @@
 
 }
 
-.hamburger-menu-list-open a {
-    font-size: 200%;
+@media only screen and (min-width: 767px) {
+    .hamburger-menu-list-open a {
+        font-size: 350%;
 
-    text-decoration: none;
-    color: white;
-    list-style: none;
-    font-weight: bold;
-    /* text-align: center; */
+        text-decoration: none;
+        color: white;
+        list-style: none;
+        font-weight: bold;
+
+    }
 }
 
-/* .hamburger-menu-list a {
-    color: red;
-    list-style: none;
-} */
-
-
-/* .hamburger-menu-list ul {
-    list-style-type: none;
-    height: 100%;
-} */
-
-/* .hamburger-menu-list ul {
-    margin: 0.5rem 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-} */
 
 .hamburger-menu-list-open a:hover {
     color: blue;
@@ -66,31 +51,15 @@
 
 }
 
-/* .dont-show-hamburger-menu-list {
-    display: none;
-} */
+@media only screen and (max-width: 767px) {
+    .hamburger-menu-list-open a {
+        font-size: 200%;
 
-/* .hamburger-menu-list-open ul li {
-    display: flex;
-} */
+        text-decoration: none;
+        color: white;
+        list-style: none;
+        font-weight: bold;
 
-/* 
-.hamburger-menu-list-container ul {
-    display: flex;
+    }
 
-    flex-direction: column;
-    justify-content: center;
-
-} */
-
-/* .hamburger-menu-list-container ul div {
-    display: flex;
-    margin: 10%;
-    width: 100%;
-
-
-} */
-
-/* .create-account {
-    width: 1
-} */
+}
