--- a/client/src/CSS/FilterCities.css
+++ b/client/src/CSS/FilterCities.css
@@ -1,26 +1,66 @@
-.cityfilter-input-box {
-    color: white;
-    background-color: darkorange;
-    padding-top: 5%;
+@media only screen and (min-width: 768px) {
+
+    .cityfilter-input-box {
+        color: white;
+        background-color: darkorange;
+
+        padding-left: 1%;
+        z-index: 1;
 
 
-    width: 100%;
-    height: 5%;
+        width: 100%;
 
-    position: fixed;
+        padding-top: 2%;
+        padding-bottom: 2%;
+
+        position: fixed;
 
 
 
+    }
+
+    .cityfilter-input label {
+        color: red;
+        font-weight: bold;
+        margin-left: 10%;
+        border-radius: 5%;
+
+    }
+
+    #filter {
+        border-radius: 5%;
+    }
 }
 
-.cityfilter-input label {
-    color: red;
-    font-weight: bold;
-    margin-left: 10%;
-    border-radius: 5%;
+@media only screen and (max-width: 767px) {
 
-}
+    .cityfilter-input-box {
+        color: white;
+        background-color: darkorange;
 
-#filter {
-    border-radius: 5%;
+        padding-left: 1%;
+
+
+
+        width: 100%;
+        padding-top: 5%;
+        padding-bottom: 5%;
+
+        position: fixed;
+
+
+
+    }
+
+    .cityfilter-input label {
+        color: red;
+        font-weight: bold;
+        margin-left: 10%;
+        border-radius: 5%;
+
+    }
+
+    #filter {
+        border-radius: 5%;
+    }
 }
