--- a/client/src/CSS/Landing.css
+++ b/client/src/CSS/Landing.css
@@ -1,38 +1,120 @@
+@media only screen and (min-width: 768px) {
 
-.landing-page  {
-  
+
+  /* html {
+    overflow: hidden;
+  } */
+
+  .landing-page {
+    margin-top: 1%;
     height: 93%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
   }
-  
+
+
+  .perfect-trip {
+    padding: 1%;
+    font-size: 250%;
+    text-align: center;
+  }
+
+  .logo {
+    height: 25%;
+    margin-left: 25%;
+    width: 50%;
+    margin-top: 2%;
+  }
+
+  .start-browsing-flexer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+  }
+
+  .start-browsing-header {
+    text-align: center;
+  }
+
+
+  .startBrowsing {
+    width: 15%;
+    text-align: center;
+    margin-bottom: 2%;
+
+  }
+
+  .home-flexer {
+    margin-top: 1%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .homeIcon {
+    width: 3%;
+  }
+
+  .own-mytinerary {
+    display: none;
+
+  }
+}
+
+@media only screen and (max-width: 767px) {
+
+  .landing-page {
+    margin-top: 1%;
+    height: 93%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .perfect-trip {
+    padding: 1%;
+  }
+
   .logo {
     height: 25%;
     width: 100%;
   }
-  
+
   .start-browsing-flexer {
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
+
   }
-  
-  .startBrowsing
-  {
-    width:25%;
-    
+
+  .startBrowsing {
+    width: 25%;
+    padding: 1%;
+
   }
-  
+
   .home-flexer {
     height: 15%;
     width: 100%;
-    display:flex;
+    display: flex;
     justify-content: center;
     align-items: center;
   }
+
   .homeIcon {
     width: 10%;
   }
-  
+
+  .own-mytinerary {
+    display: none;
+
+  }
+
+
+}
