--- a/client/src/CSS/Cities.css
+++ b/client/src/CSS/Cities.css
@@ -1,4 +1,8 @@
 @media only screen and (min-width: 768px) {
+  .citycard {
+    width: 30%;
+  }
+
   .city-container {
     /* overflow: hidden; */
 
@@ -104,6 +108,9 @@
 
 
 @media only screen and (max-width: 767px) {
+
+
+
   .city-container {
 
     display: grid;
