--- a/client/src/CSS/FilterCities.css
+++ b/client/src/CSS/FilterCities.css
@@ -17,11 +17,19 @@
 
 
 
+
+    }
+
+    .cityfilter-input-box label {
+        font-size: 125%;
+        font-weight: bold;
+
     }
 
     .cityfilter-input label {
         color: red;
         font-weight: bold;
+
         margin-left: 10%;
         border-radius: 5%;
 
