--- a/client/src/CSS/Itinerary.css
+++ b/client/src/CSS/Itinerary.css
@@ -21,7 +21,7 @@
     height: 100%;
     grid-template-columns: 19% 27% 27% 27%;
 
-    grid-template-rows: 5fr, 5fr, 5fr, 37fr, 5fr, 7fr;
+    grid-template-rows: 62.1px 95.3px 30.5px 236px 109.6px auto;
 
     height: 100%;
     width: 98%;
